--- a/duocLy.html
+++ b/duocLy.html
@@ -744,7 +744,7 @@
     "B": "Pefloxacin",
     "C": "Tobramycin",
     "D": "Lincomycin",
-    "answer": "L"
+    "answer": "D"
   },
   {
     "question": "Thuốc có tác dụng tống đàm ra khỏi đường hô hấp tốt nhất:",
