--- a/duocLy.html
+++ b/duocLy.html
@@ -1092,6 +1092,19 @@
   }
 ];
 
+
+
+        function shuffle(array) {
+            for (let i = array.length - 1; i > 0; i--) {
+                const j = Math.floor(Math.random() * (i + 1));
+                [array[i], array[j]] = [array[j], array[i]];
+            }
+        }
+
+        // Shuffle questions on page load
+        shuffle(questions);
+
+
         let currentQuestion = 0;
         let selectedAnswer = '';
         let score = 0;
