--- a/monGiDo269Cau.html
+++ b/monGiDo269Cau.html
@@ -2439,7 +2439,7 @@
     "B": "Hiếu khí.",
     "C": "Bắt màu đỏ khi nhuộm Gram.",
     "D": "Phát triển chậm.",
-    "answer": "Cs"
+    "answer": "C"
   },
   {
     "id": 240,
@@ -2631,6 +2631,15 @@
     "answer": "C"
   }
 ];
+        function shuffle(array) {
+            for (let i = array.length - 1; i > 0; i--) {
+                const j = Math.floor(Math.random() * (i + 1));
+                [array[i], array[j]] = [array[j], array[i]];
+            }
+        }
+
+        // Shuffle questions on page load
+        shuffle(questions);
 
         let currentQuestion = 0;
         let selectedAnswer = '';
