--- a/template.html
+++ b/template.html
@@ -291,6 +291,16 @@
     <script>
         const questions = [];
 
+        function shuffle(array) {
+            for (let i = array.length - 1; i > 0; i--) {
+                const j = Math.floor(Math.random() * (i + 1));
+                [array[i], array[j]] = [array[j], array[i]];
+            }
+        }
+
+        // Shuffle questions on page load
+        shuffle(questions);
+
         let currentQuestion = 0;
         let selectedAnswer = '';
         let score = 0;
