--- a/monGiDo269Cau.html
+++ b/monGiDo269Cau.html
@@ -2693,6 +2693,7 @@
             selectedAnswer = letter;
             userAnswers[currentQuestion] = letter; // Lưu câu trả lời
             document.getElementById('submitBtn').disabled = false;
+            playSound('chooseSound'); // Phát âm thanh khi chọn đáp án
         }
 
         function checkAnswer() {
@@ -2715,10 +2716,12 @@
             if (isCorrect) {
                 feedback.textContent = '💕 Vợ anh giỏi quá!';
                 feedback.className = 'feedback correct show';
+                playSound('correctSound'); // Phát âm thanh khi trả lời đúng
                 score++;
             } else {
                 feedback.textContent = '😊 Sai ùi, vợ cố lên nhé!';
                 feedback.className = 'feedback wrong show';
+                playSound('failSound'); // Phát âm thanh khi trả lời sai
             }
 
             document.getElementById('submitBtn').textContent = currentQuestion < questions.length - 1 ? 'Câu Tiếp Theo' : 'Hoàn Thành';
@@ -2794,8 +2797,18 @@
             feedback.textContent = '';
         }
 
+        function playSound(soundId) {
+            const sound = document.getElementById(soundId);
+            if (sound) {
+                sound.currentTime = 0; // Reset sound to start
+                sound.play();
+            }
+        }
         // Load first question when page loads
         loadQuestion();
     </script>
+    <audio id="chooseSound" src="soundEffect/ChooseSound.mp3"></audio>
+    <audio id="correctSound" src="soundEffect/CorrectSound.mp3"></audio>
+    <audio id="failSound" src="soundEffect/FailSound.mp3"></audio>
 </body>
 </html>
